--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <p>Ottawa is capital of Canada.</p>
 
     <p><a href="#top">Go to the top</a></p> -->
+    <h1>heading</h1>
     <p>
         The typical filler text is the <span>Lorem Ipsum</span>
     </p>
